[package]
name = "hello_salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version="0.29", features = ["logging","cors"]}
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
serde = { version = "1.0.143", features = ["derive"] }